# WinterPixelGames.com

./: .gitignore  .replit  Home.py  LICENSE  README.md  backend.py  common_config.py  country_or_region.py  environment.yml  generate_pot_file.sh  main.py  pyproject.toml  time_trials_sql.py  zh.po
.streamlit/: config.toml
all_pages/: 0 Home.py  1 Rocket Bot Royale.py  2 Goober Dash.py  3 Goober Royale.py  4 Goober Shot.py  5 Moonrock Miners.py  6 About.py  6 Broski.py  7 About.py  7 Useful Links.py  8 Useful Links.py  A Log In.py  B Sign Up.py  C Log Out.py  D Account.py  E Language.py
backend/GooberDash/: update_time_trails_leaderboard.py
css/: replace_default_style.css
email/: index.html
locales/: base.pot  convert.sh
pages/: 1 Rocket Bot Royale.py  2 Goober Dash.py  3 Goober Royale.py  4 Goober Shot.py  5 Moonrock Miners.py  6 About.py  7 Useful Links.py
pages/GooberDash/: time_trials.py
pages/RocketBotRoyale/: page1.py
streamlit/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  abseil-cpp-20211102.0-hd4dd3e8_0.json  altair-5.0.1-py312h06a4308_0.json  arrow-cpp-14.0.2-h374c478_1.json  attrs-23.1.0-py312h06a4308_0.json  aws-c-auth-0.6.19-h5eee18b_0.json  aws-c-cal-0.5.20-hdbd6064_0.json  aws-c-common-0.8.5-h5eee18b_0.json  aws-c-compression-0.2.16-h5eee18b_0.json  aws-c-event-stream-0.2.15-h6a678d5_0.json  aws-c-http-0.6.25-h5eee18b_0.json  aws-c-io-0.13.10-h5eee18b_0.json  aws-c-mqtt-0.7.13-h5eee18b_0.json  aws-c-s3-0.1.51-hdbd6064_0.json  aws-c-sdkutils-0.1.6-h5eee18b_0.json  aws-checksums-0.1.13-h5eee18b_0.json  (+146 more)
(+339 files in other folders)
