[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pandas = "2.2.2"
numpy = "1.26.4"
plotly = "5.22.0"
websocket-client = "1.8.0"
emoji-country-flag = "1.3.2"
streamlit-navigation-bar = "3.3.0"
websocket = "^0.2.1"
flag = "^0.1.1"
replit = "^3.6.3"
requests = "^2.31.0"
flask = "^3.0.3"
streamlit = "1.35.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"